# Snake

./: CMakeLists.txt  apple.cpp  apple.h  board.cpp  board.h  coords.cpp  coords.h  drawer.cpp  drawer.h  entity.cpp  entity.h  field.cpp  field.h  main.cpp  settings.cpp  settings.h  snakeBody.cpp  snakeBody.h  snakeHead.cpp  snakeHead.h  snakeSegment.cpp  snakeSegment.h  snakeTail.cpp  snakeTail.h  void.cpp  void.h  wall.cpp  wall.h
